// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-snooze Renders \`extra-details-snooze\` with date in previous month 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Snooze</strong>
    <div>By : snooze-author</div>
    <div>Date : 07/08/2013 19:00:00</div>
    <div>End : 07/08/2013 19:00:00</div>
    <div>Initiator : snooze-initiator</div>
    <div class="c-extra-details__message">Comment : snooze-message</div>
  </div>
</div>
<div><span class="c-extra-details__badge pink"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">alarm</i></span><span class="v-tooltip c-extra-details v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span></div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` with full snooze 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Snooze</strong>
    <div>By : snooze-author</div>
    <div>Date : 6:00:00</div>
    <div>End : 6:00:00</div>
    <div>Initiator : snooze-initiator</div>
    <div class="c-extra-details__message">Comment : snooze-message</div>
  </div>
</div>
<div><span class="c-extra-details__badge pink"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">alarm</i></span><span class="v-tooltip c-extra-details v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span></div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` without initiator 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Snooze</strong>
    <div>By : snooze-author</div>
    <div>Date : 6:00:00</div>
    <div>End : 6:00:00</div>
    <!---->
    <div class="c-extra-details__message">Comment : snooze-message</div>
  </div>
</div>
<div><span class="c-extra-details__badge pink"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">alarm</i></span><span class="v-tooltip c-extra-details v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span></div>
`;

exports[`extra-details-snooze Renders \`extra-details-snooze\` without message 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div class="text-md-center"><strong>Snooze</strong>
    <div>By : snooze-author</div>
    <div>Date : 6:00:00</div>
    <div>End : 6:00:00</div>
    <div>Initiator : snooze-initiator</div>
    <!---->
  </div>
</div>
<div><span class="c-extra-details__badge pink"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">alarm</i></span><span class="v-tooltip c-extra-details v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span></div>
`;
